--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,17 +1,73 @@
 .home {
     width: 100%;
 
-    .imgBox {
+    .topBox {
        background-image: url(/images/dinnerTableO.png);
        background-size: cover;
        background-repeat: no-repeat;
-       height: 60vh;
+       height: 100vh;
 
     }
 
+    /*Sidebar button
+--------------------------------------------*/
+    #sidebar{
+        background:#F5F5F5;
+        width:180px;
+        height:100%
+        display: block;
+        position: absolute;
+        right: -180px;
+        top: 0px;
+        transition: left 0.3s linear;
+        font-family: Lato', sans-serif;
+        font-size: 25
+    }
 
+    #sidebar.visible{
+        right:0;
+        transition: left 4.0s linear;
+    }
+
+
+    ul{
+        margin:0px;
+        padding:0px;
+    }
+
+    ul li{
+        list-style: none;
+    }
+
+    ul li a{
+        color:#F5F5F5;
+        display: block;
+        width: 180px;
+        padding: 10px;
+        text-decoration: none;
+    }
+
+    #sidebar-btn{
+        display:inline-block;
+        vertical-align: middle;
+        width: 30px;
+        height:15px;
+        cursor: pointer;
+        margin: 20px;
+        position: absolute;
+        top: 0px;
+        left: -60px;
+    }
+
+    #sidebar-btn span{
+        height:3px;
+        background: #2b0f16;
+        margin-bottom: 5px;
+        display: block
+        
+    }
+        
     
-  
    
 
    
